--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Welcome to my Flask App</h1>
+    <h1>Flask App</h1>
     <h1>by gosorio</h1>
     <h1>Cambio: 0</h1>
     <p>This is the index page.</p>
